# DocuRAG

./: .gitignore  Dockerfile  DocuRAG.ipynb  README.md  README_HF_SPACES.md  app.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: DocuRAG-checkpoint.ipynb
docurag/core/: chunking.py  config.py  extraction.py  ingestion.py  rag.py  vectorstore.py
docurag/ui/: formatting.py  gradio_app.py
docurag/utils/: nlp.py  text.py
scripts/: run_gradio.sh
